--- a/src/main/webapp/resources/html/holiday.html
+++ b/src/main/webapp/resources/html/holiday.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>上海燃气数据分析</title>
-    <link rel="shortcut icon" href="/resources/images/logo.ico" />
-    <link rel="stylesheet" href="/resources/css/amazeui.css" />
+    <link rel="shortcut icon" href="/resources/images/logo.ico"/>
+    <link rel="stylesheet" href="/resources/css/amazeui.css"/>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/resources/css/core.css" />
-    <link rel="stylesheet" href="/resources/css/menu.css" />
-    <link rel="stylesheet" href="/resources/css/index.css" />
-    <link rel="stylesheet" href="/resources/css/admin.css" />
-    <link rel="stylesheet" href="/resources/css/page/typography.css" />
+    <link rel="stylesheet" href="/resources/css/core.css"/>
+    <link rel="stylesheet" href="/resources/css/menu.css"/>
+    <link rel="stylesheet" href="/resources/css/index.css"/>
+    <link rel="stylesheet" href="/resources/css/admin.css"/>
+    <link rel="stylesheet" href="/resources/css/page/typography.css"/>
     <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
-<!-- Begin page -->
 <header class="am-topbar am-topbar-fixed-top">
     <div class="am-topbar-left am-hide-sm-only">
         <a href="index.html" class="logo"><span>上海燃气</span><i class="zmdi zmdi-layers"></i></a>
@@ -23,7 +22,7 @@
     <div class="contain">
         <ul class="am-nav am-navbar-nav am-navbar-left">
 
-            <li><h4 class="page-title">音频分析</h4></li>
+            <li><h4 class="page-title">节假日分析</h4></li>
         </ul>
 
         <ul class="am-nav am-navbar-nav am-navbar-right">
@@ -44,10 +43,12 @@
             <!-- User -->
             <div class="user-box am-hide-sm-only">
                 <div class="user-img">
-                    <img src="/resources/images/avatar-1.jpg" alt="user-img" title="Mat Helme" class="img-circle img-thumbnail img-responsive">
+                    <img src="/resources/images/avatar-1.jpg" alt="user-img" title="Mat Helme"
+                         class="img-circle img-thumbnail img-responsive">
+
                     <div class="user-status offline"><i class="am-icon-dot-circle-o" aria-hidden="true"></i></div>
                 </div>
-                <h5><a href="#">Mat Helme</a> </h5>
+                <h5><a href="#">Mat Helme</a></h5>
                 <ul class="list-inline">
                     <li>
                         <a href="#">
@@ -67,7 +68,8 @@
             <ul class="am-list admin-sidebar-list">
                 <li><a href="index.html"><span class="am-icon-home"></span> 首页</a></li>
                 <li class="admin-parent">
-                    <a class="am-cf" data-am-collapse="{target: '#collapse-nav1'}"><span class="am-icon-table"></span>话务分析 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
+                    <a class="am-cf" data-am-collapse="{target: '#collapse-nav1'}"><span class="am-icon-table"></span>话务分析
+                        <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
                     <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav1">
                         <li><a href="audio.html" class="am-cf"> 音频分析</a></li>
                         <li><a href="sentiment.html">情感分析</a></li>
@@ -75,62 +77,47 @@
                     </ul>
                 </li>
                 <li class="admin-parent">
-                    <a class="am-cf" data-am-collapse="{target: '#collapse-nav2'}"><i class="am-icon-line-chart" aria-hidden="true"></i> 报修预测分析 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
+                    <a class="am-cf" data-am-collapse="{target: '#collapse-nav2'}"><i class="am-icon-line-chart"
+                                                                                      aria-hidden="true"></i> 报修预测分析
+                        <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
                     <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav2">
                         <li><a href="problem.html" class="am-cf"> 报修问题</a></li>
                         <li><a href="security.html" class="am-cf"> 安全检查</a></li>
                     </ul>
-                </li><li><a href="phone.html"><span class="am-icon-phone"></span> 电话黑名单</a></li>
+                </li>
+                <li><a href="phone.html"><span class="am-icon-phone"></span> 电话黑名单</a></li>
 
             </ul>
         </div>
     </div>
     <div class="content-page">
+        <!-- Start condition search-->
+        <div style="margin-top: 60px;">
+            <select style="width: 120px;" id="search_conditon">
+                <option>2012</option>
+                <option>2013</option>
+                <option>2014</option>
+                <option>2015</option>
+                <option selected>2016</option>
+                <option>2017</option>
+            </select>
+            <button type="button" class="btn btn-info" id="listern_condition">查询</button>
+
+        </div>
         <!-- Start content -->
         <div class="content">
             <div class="am-g">
-                <div class="am-u-md-6" >
-                    <!-- 折线图堆叠 -->
+                <div class="am-u-md-6">
+                    <!-- 国庆节单天时间段话务统计 -->
                     <div class="card-box">
-                        <div  id="voice_length" style="width: 100%;height: 400px;"></div>
+                        <div id="national_index" style="width: 100%;height: 400px;"></div>
                     </div>
                 </div>
 
                 <div class="am-u-md-6">
-                    <!-- 堆叠区域图  -->
+                    <!-- 劳动节单天时间段话务情况  -->
                     <div class="card-box">
-                        <div  id="call_type_pie" style="width: 100%;height: 400px;"></div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="am-g">
-                <div class="am-u-md-6">
-                    <!-- Step Line -->
-                    <div class="card-box">
-                        <div  id="voice_valid_pie" style="width: 100%;height: 400px;"></div>
-                    </div>
-                </div>
-
-                <div class="am-u-md-6">
-                    <!-- 大数据面积图  -->
-                    <div class="card-box">
-                        <div  id="tel_employee" style="width: 100%;height: 400px;"></div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="am-g">
-                <div class="am-u-md-6">
-                    <!-- 大数据面积图  -->
-                    <div class="card-box">
-                        <div  id="time_distribution" style="width: 100%;height: 400px;"></div>
-                    </div>
-                </div>
-                <div class="am-u-md-6">
-                    <!-- 大数据面积图  -->
-                    <div class="card-box">
-                        <div  id="tel_traffic" style="width: 100%;height: 400px;"></div>
+                        <div id="labor_index" style="width: 100%;height: 400px;"></div>
                     </div>
                 </div>
             </div>
@@ -139,10 +126,11 @@
     <!-- end right Content here -->
     <!--</div>-->
 </div>
-<script type="text/javascript" src="/resources/js/jquery-2.1.0.js" ></script>
+<script type="text/javascript" src="/resources/js/jquery-2.1.0.js"></script>
 <script type="text/javascript" src="/resources/js/amazeui.min.js"></script>
-<script type="text/javascript" src="/resources/js/blockUI.js" ></script>
-<script type="text/javascript" src="/resources/js/charts/echarts.min.js" ></script>
-<script type="text/javascript" src="/resources/js/voice/voice.js" ></script>
+<script type="text/javascript" src="/resources/js/blockUI.js"></script>
+<script type="text/javascript" src="/resources/js/charts/echarts.min.js"></script>
+<script type="text/javascript" src="/resources/js/holiday/init.js"></script>
+<script type="text/javascript" src="/resources/js/holiday/event.js"></script>
 </body>
 </html>
