节假日页面

--- a/src/main/webapp/resources/html/audio.html
+++ b/src/main/webapp/resources/html/audio.html
@@ -139,9 +139,9 @@
     <!-- end right Content here -->
     <!--</div>-->
 </div>
-<script type="text/javascript" src="/resources/js/jquery-2.1.0.js" ></script>
-<script type="text/javascript" src="/resources/js/amazeui.min.js"></script>
-<script type="text/javascript" src="/resources/js/blockUI.js" ></script>
+<script type="text/javascript" src="/resources/js/plugin/jquery-2.1.0.js" ></script>
+<script type="text/javascript" src="/resources/js/plugin/amazeui.min.js"></script>
+<script type="text/javascript" src="/resources/js/plugin/blockUI.js" ></script>
 <script type="text/javascript" src="/resources/js/charts/echarts.min.js" ></script>
 <script type="text/javascript" src="/resources/js/voice/voice.js" ></script>
 </body>
