--- a/src/main/webapp/resources/html/holiday.html
+++ b/src/main/webapp/resources/html/holiday.html
@@ -108,16 +108,31 @@
         <div class="content">
             <div class="am-g">
                 <div class="am-u-md-6">
-                    <!-- 国庆节单天时间段话务统计 -->
-                    <div class="card-box">
-                        <div id="national_index" style="width: 100%;height: 400px;"></div>
+                    <!-- 春节单天时间段话务统计 -->
+                    <div class="card-box" style="border: 0.5px solid #00efe0;">
+                        <div id="Year_index1" style="width: 100%;height: 300px;"></div>
                     </div>
                 </div>
 
                 <div class="am-u-md-6">
-                    <!-- 劳动节单天时间段话务情况  -->
-                    <div class="card-box">
-                        <div id="labor_index" style="width: 100%;height: 400px;"></div>
+                    <!-- 春节话务时间段分布  -->
+                    <div class="card-box" style="border: 0.5px solid #00efe0;">
+                        <div id="Year_index2" style="width: 100%;height: 300px;"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="am-g">
+                <div class="am-u-md-6">
+                    <!-- 国庆节单天时间段话务统计 -->
+                    <div class="card-box" style="border: 0.5px solid #00efe0;">
+                        <div id="national_index1" style="width: 100%;height: 300px;"></div>
+                    </div>
+                </div>
+
+                <div class="am-u-md-6">
+                    <!-- 国庆节话务时间段分布  -->
+                    <div class="card-box" style="border: 0.5px solid #00efe0;">
+                        <div id="national_index2" style="width: 100%;height: 300px;"></div>
                     </div>
                 </div>
             </div>
@@ -126,10 +141,11 @@
     <!-- end right Content here -->
     <!--</div>-->
 </div>
-<script type="text/javascript" src="/resources/js/jquery-2.1.0.js"></script>
-<script type="text/javascript" src="/resources/js/amazeui.min.js"></script>
-<script type="text/javascript" src="/resources/js/blockUI.js"></script>
+<script type="text/javascript" src="/resources/js/plugin/jquery-2.1.0.js"></script>
+<script type="text/javascript" src="/resources/js/plugin/amazeui.min.js"></script>
+<script type="text/javascript" src="/resources/js/plugin/blockUI.js"></script>
 <script type="text/javascript" src="/resources/js/charts/echarts.min.js"></script>
+<script type="text/javascript" src="/resources/js/global/share.js"></script>
 <script type="text/javascript" src="/resources/js/holiday/init.js"></script>
 <script type="text/javascript" src="/resources/js/holiday/event.js"></script>
 </body>
