--- a/src/main/webapp/resources/html/phone.html
+++ b/src/main/webapp/resources/html/phone.html
@@ -112,9 +112,8 @@
     </div>
 </div>
 <!-- navbar -->
-<script type="text/javascript" src="/resources/js/jquery-2.1.0.js" ></script>
-<script type="text/javascript" src="/resources/js/blockUI.js" ></script>
-<script type="text/javascript" src="/resources/js/blockUI.js" ></script>
+<script type="text/javascript" src="/resources/js/plugin/jquery-2.1.0.js" ></script>
+<script type="text/javascript" src="/resources/js/plugin/blockUI.js" ></script>
 <script type="text/javascript" src="/resources/js/event/globle.js"></script>
 </body>
 </html>
