--- a/src/main/webapp/resources/html/problem.html
+++ b/src/main/webapp/resources/html/problem.html
@@ -141,10 +141,9 @@
 
 <!-- navbar -->
 <a href="admin-offcanvas" class="am-icon-btn am-icon-th-list am-show-sm-only admin-menu" data-am-offcanvas="{target: '#admin-offcanvas'}"><!--<i class="fa fa-bars" aria-hidden="true"></i>--></a>
-<script type="text/javascript" src="/resources/js/jquery-2.1.0.js" ></script>
-<script type="text/javascript" src="/resources/js/amazeui.min.js"></script>
-<script type="text/javascript" src="/resources/js/app.js" ></script>
-<script type="text/javascript" src="/resources/js/blockUI.js" ></script>
+<script type="text/javascript" src="/resources/js/plugin/jquery-2.1.0.js" ></script>
+<script type="text/javascript" src="/resources/js/plugin/amazeui.min.js"></script>
+<script type="text/javascript" src="/resources/js/plugin/blockUI.js" ></script>
 <script type="text/javascript" src="/resources/js/charts/echarts.min.js" ></script>
 <script type="text/javascript" src="/resources/js/problem/problem.js" ></script>
 </body>
