--- a/src/main/webapp/resources/html/gas/index.html
+++ b/src/main/webapp/resources/html/gas/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link> -->
   <link rel="stylesheet" href="dist/semantic.min.css"></link>
+  <!-- <link rel="stylesheet" href="F:\onedrive\program\JS\SemanticUI\dist\semantic.min.css"></link> -->
   <title>Example</title>
   <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=h31gPawGznx5GxO3BRzQBld7eFktCfrw"></script>
